--- a/src/app/pages/dashboard/main-header/main-header.component.html
+++ b/src/app/pages/dashboard/main-header/main-header.component.html
@@ -4,10 +4,10 @@
     <div class="header-title ion-align-items-center ion-display-flex">
       <ion-img
         class="ion-margin-end"
-        src="/assets/image/Karaj_government_logo.png"
-        alt="حفاری کرج"
+        src="/assets/icon/logo.png"
+        alt="یوز"
       ></ion-img>
-      <ion-text color="dark"> حفاری شهرداری کرج </ion-text>
+      <ion-text color="dark"> سامانه حضور و غیاب یوز </ion-text>
     </div>
     <ion-button shape="round" fill="clear" size="large" [slot]="'end'">
       <ion-icon name="notifications-outline" color="dark"></ion-icon>
