--- a/src/app/pages/dashboard/main-tabs/main-tabs.component.html
+++ b/src/app/pages/dashboard/main-tabs/main-tabs.component.html
@@ -48,6 +48,6 @@
 <!-- <app-new-off-days [modalID]="modalID"></app-new-off-days> -->
 <ion-modal #modal trigger="open-modal" [presentingElement]="presentingElement">
   <ng-template>
-    <app-new-request></app-new-request>
+    <!-- <app-new-request></app-new-request> -->
   </ng-template>
 </ion-modal>
