--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,7 +5,7 @@
     <div class="card-content">
       <div class="header-section">
         <div class="greeting">
-          <h1>سلام! 👋</h1>
+          <h1>سلام!</h1>
           <p>به اپلیکیشن خوش آمدید</p>
         </div>
         <div class="profile-icon">
