--- a/src/app/pages/dashboard/main-header/main-header.component.html
+++ b/src/app/pages/dashboard/main-header/main-header.component.html
@@ -3,7 +3,7 @@
     <ion-menu-button size="large" [slot]="'start'"></ion-menu-button>
     <div class="header-title ion-align-items-center ion-display-flex">
       <ion-img
-        class="ion-margin-end"
+        class="me-2"
         src="/assets/icon/logo.png"
         alt="یوز"
       ></ion-img>
