--- a/src/app/pages/dashboard/main-tabs/main-tabs.component.html
+++ b/src/app/pages/dashboard/main-tabs/main-tabs.component.html
@@ -14,7 +14,7 @@
       گزارشات
     </ion-tab-button>
 
-    <ion-fab-button id="open-modal">
+    <ion-fab-button id="open-modal" (click)="gotoNewRequest()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
 
@@ -45,9 +45,4 @@
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
-<!-- <app-new-off-days [modalID]="modalID"></app-new-off-days> -->
-<ion-modal #modal trigger="open-modal" [presentingElement]="presentingElement">
-  <ng-template>
-    <!-- <app-new-request></app-new-request> -->
-  </ng-template>
-</ion-modal>
+
