--- a/src/assets/theme/base.scss
+++ b/src/assets/theme/base.scss
@@ -1,21 +1,3 @@
-.ltr {
-    text-align: left;
-    direction: ltr;
-}
-
-.rtl {
-    text-align: right;
-    direction: rtl;
-}
-
-.me-auto {
-    margin-inline-end: auto;
-}
-
-.ms-auto {
-    margin-inline-start: auto;
-}
-
 // height
 .h-100 {
     height: 100%;
@@ -49,4 +31,308 @@
 
 .w-25 {
     width: 25%;
+}
+.ltr {
+    text-align: left;
+    direction: ltr;
+}
+
+.rtl {
+    text-align: right;
+    direction: rtl;
+}
+
+.d-block {
+    display: block;
+}
+
+.d-flex {
+    display: flex;
+}
+
+/* Padding */
+
+.p-0 {
+    padding: 0rem !important;
+}
+
+.px-0 {
+    padding-inline-start: 0rem !important;
+    padding-inline-end: 0rem !important;
+}
+
+.p-1 {
+    padding: 0.25rem !important;
+}
+
+.p-2 {
+    padding: 0.5rem !important;
+}
+
+.p-3 {
+    padding: 1rem !important;
+}
+
+.p-4 {
+    padding: 1.5rem !important;
+}
+
+.p-5 {
+    padding: 3rem !important;
+}
+
+.pe-1 {
+    padding-inline-end: 0.25rem !important;
+}
+
+.pe-2 {
+    padding-inline-end: 0.5rem !important;
+}
+
+.pe-3 {
+    padding-inline-end: 1rem !important;
+}
+
+.pe-4 {
+    padding-inline-end: 1.5rem !important;
+}
+
+.pe-5 {
+    padding-inline-end: 3rem !important;
+}
+
+.py-1 {
+    padding-top: 0.25rem !important;
+    padding-bottom: 0.25rem !important;
+}
+
+.py-2 {
+    padding-top: 0.5rem !important;
+    padding-bottom: 0.5rem !important;
+}
+
+.py-3 {
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+}
+
+.py-4 {
+    padding-top: 1.5rem !important;
+    padding-bottom: 1.5rem !important;
+}
+
+.py-5 {
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+}
+
+/* Marign */
+
+.m-0 {
+    margin: 0rem !important;
+}
+
+.m-1 {
+    margin: 0.25rem !important;
+}
+
+.m-2 {
+    margin: 0.5rem !important;
+}
+
+.m-3 {
+    margin: 1rem !important;
+}
+
+.m-4 {
+    margin: 1.5rem !important;
+}
+
+.m-5 {
+    margin: 3rem !important;
+}
+
+.mt-0 {
+    margin-top: 0rem !important;
+}
+
+.mt-1 {
+    margin-top: 0.25rem !important;
+}
+
+.mt-2 {
+    margin-top: 0.5rem !important;
+}
+
+.mt-3 {
+    margin-top: 1rem !important;
+}
+
+.mt-4 {
+    margin-top: 1.5rem !important;
+}
+
+.mt-5 {
+    margin-top: 3rem !important;
+}
+
+.ms-0 {
+    margin-inline-start: 0rem !important;
+}
+
+.ms-1 {
+    margin-inline-start: 0.25rem !important;
+}
+
+.ms-2 {
+    margin-inline-start: 0.5rem !important;
+}
+
+.ms-3 {
+    margin-inline-start: 1rem !important;
+}
+
+.ms-4 {
+    margin-inline-start: 1.5rem !important;
+}
+
+.ms-5 {
+    margin-inline-start: 3rem !important;
+}
+
+.me-0 {
+    margin-inline-end: 0rem !important;
+}
+
+.me-1 {
+    margin-inline-end: 0.25rem !important;
+}
+
+.me-2 {
+    margin-inline-end: 0.5rem !important;
+}
+
+.me-3 {
+    margin-inline-end: 1rem !important;
+}
+
+.me-4 {
+    margin-inline-end: 1.5rem !important;
+}
+
+.me-5 {
+    margin-inline-end: 3rem !important;
+}
+
+.mx-1 {
+    margin-inline-start: 0.25rem !important;
+    margin-inline-end: 0.25rem !important;
+}
+
+.mb-1 {
+    margin-bottom: 0.25rem !important;
+}
+
+.mb-2 {
+    margin-bottom: 0.5rem !important;
+}
+
+.mb-3 {
+    margin-bottom: 1rem !important;
+}
+
+.mb-4 {
+    margin-bottom: 1.5rem !important;
+}
+
+.mb-5 {
+    margin-bottom: 3rem !important;
+}
+
+.mx-2 {
+    margin-inline-start: 0.5rem !important;
+    margin-inline-end: 0.5rem !important;
+}
+
+.mx-3 {
+    margin-inline-start: 1rem !important;
+    margin-inline-end: 1rem !important;
+}
+
+.mx-4 {
+    margin-inline-start: 1.5rem !important;
+    margin-inline-end: 1.5rem !important;
+}
+
+.mx-5 {
+    margin-inline-start: 3rem !important;
+    margin-inline-end: 3rem !important;
+}
+
+.ms-auto {
+    margin-inline-start: auto;
+}
+
+.me-auto {
+    margin-inline-end: auto;
+}
+
+.mx-auto {
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+}
+
+.my-3 {
+    margin-top: 1rem !important;
+    margin-bottom: 1rem !important;
+}
+
+.my-4 {
+    margin-top: 1.5rem !important;
+    margin-bottom: 1.5rem !important;
+}
+
+.my-5 {
+    margin-top: 3rem !important;
+    margin-bottom: 3rem !important;
+}
+
+.my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.pre-line {
+    white-space: pre-line;
+}
+
+.p-absolute {
+    position: absolute;
+}
+
+.p-relative {
+    position: relative;
+}
+
+.c-pointer {
+    cursor: pointer;
+}
+
+.success {
+    background: var(--ion-color-success);
+    color: var(--ion-color-light);
+}
+
+.danger {
+    background: var(--ion-color-danger);
+    color: var(--ion-color-light);
+}
+
+.warning {
+    background: var(--ion-color-warning);
+    color: var(--ion-color-light);
+}
+
+.overflow-x {
+    overflow-x: scroll;
 }
