--- a/src/assets/theme/global.scss
+++ b/src/assets/theme/global.scss
@@ -36,26 +36,26 @@
 @import "@ionic/angular/css/palettes/dark.class.css";
 
 // @import '@ionic/angular/css/palettes/dark.system.css';
-@font-face {
-  font-family: "vazir";
-  src: url("../font/Vazir.ttf");
-}
+// @font-face {
+//   font-family: "vazir";
+//   src: url("../font/Vazir.ttf");
+// }
+
+// @font-face {
+//   font-family: "vazir";
+//   src: url("../font/Vazir-Bold.ttf");
+//   font-weight: bold;
+// }
 
 @font-face {
   font-family: "vazir";
-  src: url("../font/Vazir-Bold.ttf");
-  font-weight: bold;
+  src: url("../font/Vazir-FD-WOL.ttf") format("truetype");
 }
 
-@font-face {
-  font-family: "vazir";
-  src: url("../font/Vazir.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "vazirBold";
-  src: url("../font/Vazir-Bold.ttf") format("truetype");
-}
+// @font-face {
+//   font-family: "vazirBold";
+//   src: url("../font/Vazir-Bold.ttf") format("truetype");
+// }
 
 * {
   margin: 0;
@@ -65,8 +65,9 @@
 }
 
 body {
-  font-family: "vazir", sans-serif;
+  // font-family: "vazir", sans-serif;
   background-color: #ebf2fa;
+  // font-size: small;
 }
 
 html:lang(fa) {
@@ -88,7 +89,7 @@ html:lang(en) {
 }
 
 ion-input {
-  height: 65px;
+  // height: 65px;
   --background: #F1F4FF !important;
   --border-color: #e9e9e9 !important;
   --color: #626262 !important;
@@ -103,10 +104,6 @@ ion-button {
   filter: drop-shadow(0px 10px 20px #CBD6FF);
 }
 
-.input-label-placement-floating.sc-ion-input-md-h .label-text-wrapper.sc-ion-input-md {
-  transform: translateY(75%) scale(1);
-}
-
 .input-fill-outline.has-focus.sc-ion-input-md-h {
   --border-color: var(--highlight-color) !important;
 }
@@ -114,4 +111,8 @@ ion-button {
 ion-content {
   --padding-start: var(--ion-padding, 16px);
   --padding-end: var(--ion-padding, 16px);
+}
+.label-text {
+  // border-inline-end: 1px solid #b3b3b3;
+  // padding-inline-end: 5px;
 }
