--- a/src/app/pages/dashboard/main-header/main-header.component.html
+++ b/src/app/pages/dashboard/main-header/main-header.component.html
@@ -2,12 +2,8 @@
   <ion-toolbar class="ion-display-flex">
     <ion-menu-button size="large" [slot]="'start'"></ion-menu-button>
     <div class="header-title ion-align-items-center ion-display-flex">
-      <ion-img
-        class="me-2"
-        src="/assets/icon/logo.png"
-        alt="یوز"
-      ></ion-img>
-      <ion-text color="dark"> سامانه حضور و غیاب یوز </ion-text>
+      <ion-img class="me-2" src="/assets/icon/logo1.png"></ion-img>
+      <ion-text color="dark"> سامانه موبایل Gis </ion-text>
     </div>
     <ion-button shape="round" fill="clear" size="large" [slot]="'end'">
       <ion-icon name="notifications-outline" color="dark"></ion-icon>
