--- a/src/app/pages/new-request/new-request.page.html
+++ b/src/app/pages/new-request/new-request.page.html
@@ -14,5 +14,7 @@
     ></ion-input>
   </form> -->
   <!-- <app-autocomplete></app-autocomplete> -->
-  <button nz-button nzType="primary">Primary Button</button>
+  <!-- <button nz-button nzType="primary">Primary Button</button> -->
+  <!-- <app-autocomplete></app-autocomplete> -->
+  <form-builder-config></form-builder-config>
 </ion-content>
