--- a/src/app/components/widgets/input/input-password/input-password.component.html
+++ b/src/app/components/widgets/input/input-password/input-password.component.html
@@ -1,8 +1,13 @@
-<div class="block-password ion-margin-top">
+@if (label()) {
+<div class="mb-1 ms-1">
+  <ion-text> {{ label() | translate }} </ion-text>
+</div>
+}
+<div class="block-password">
   <ion-input
     [formControl]="control()"
     [type]="showPassword ? 'text' : 'password'"
-    [label]="label() | translate"
+    [placeholder]="placeHolder() | translate"
     [fill]="fill()"
   >
     <!-- <ion-input-password-toggle slot="end"></ion-input-password-toggle> -->
